--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
               </div>
               <div class="messages"></div>
               <div class="typebox">
-                  <input type="text" id="message-input" placeholder="Type Message">
-                  <button id="send-message">Send</button>
-              </div>
+                <i class="emoji-icon"></i>
+                <input type="text" id="message-input" placeholder="Type Message">
+                <button id="send-message">Send</button>
+              </div>              
           </div>
       </div>
   
