--- a/index.html
+++ b/index.html
@@ -3,39 +3,18 @@
   <head>
       <meta charset="UTF-8">
       <title>Verbify</title>
-      <link rel="stylesheet" href="style.css">
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.min.js"></script>
-      <link rel="icon" href="pics/vb-icon.jpg">
+      <!-- Include Material-UI CSS -->
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mui/material@5.0.3/dist/css/mui.min.css" integrity="sha384-/GOeFv8Z6egVZ3g8U5+G3/Dxpgp6ptOZUnQmPBoR6JEnazeg4lF/xFQVJg7gTj2N" crossorigin="anonymous">
   </head>
   <body>
-      <div class="app">
-          <div class="screen login-page">
-              <div class="form">
-                  <form class="login-form">
-                    <h2></i> Login</h2>
-                    <input type="text" id="username" placeholder="Username" required />
-                    <button class="btn" id="join-user">
-                      <span></span>
-                      Sign In
-                    </button>
-                  </form>
-              </div>
-          </div>
-      
-          
-          <div class="screen chat-screen">
-              <div class="header">
-                  <div class="logo">Chatroom</div>
-                  <button id="exit-chat">Exit</button>
-              </div>
-              <div class="messages"></div>
-              <div class="typebox">
-                <input type="text" id="message-input" placeholder="Type Message">
-                <button id="send-message">Send</button>
-              </div>              
-          </div>
-      </div>
-  
+      <div class="app" id="app"></div>
+
+      <script src="https://cdn.jsdelivr.net/npm/react@17.0.2/umd/react.production.min.js" crossorigin></script>
+      <script src="https://cdn.jsdelivr.net/npm/react-dom@17.0.2/umd/react-dom.production.min.js" crossorigin></script>
+      <script src="https://cdn.jsdelivr.net/npm/@mui/material@5.0.3/umd/mui.production.min.js" crossorigin></script>
+      <script src="https://cdn.jsdelivr.net/npm/@mui/icons-material@5.0.3/umd/material-icons.production.min.js" crossorigin></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.min.js"></script>
       <script src="socket.io/socket.io.js"></script>
       <script src="code.js"></script>
   </body>
